tests/reject/tatomic.nim
var 
  atomic: int
  
echo atomic

